format program times

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -149,6 +149,9 @@ img.blur {
 }
 
 .time-cell {
+  width: 80px; /* Adjust as needed */
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
