--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -10,5 +10,8 @@
 }
 
 .time-cell {
+  width: 80px; /* Adjust as needed */
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
