--- a/assets/css/_sass/custom.scss
+++ b/assets/css/_sass/custom.scss
@@ -14,5 +14,8 @@
 // }
 
 .time-cell {
+  width: 80px; /* Adjust as needed */
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
